--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Bio page</title>
 </head>
 <body>
     
@@ -45,6 +45,9 @@
     <li>Fishhouse Stories Blog</li>
     <li>The Red Log Cabin Experience</li>
   </ul>
+
+  <p class="title">Coming soon!</p>
+  <p>My next project is Antacademy, a demo of the newest, hottest child oriented learning platform on the web! Click <a href = "https://github.com/shervheimb6/first-assignment.git" target="_blank">here</a> to find out more.</p>
   <div class="contact">
   <h2>Contact</h2>
   </div>
