--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bio page</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     
 </body>
 </html>
-
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title></title>
-  <link href="style.css" type="text/css" rel="stylesheet">
-</head>
 
 <body>
   <div class="header">
@@ -53,7 +46,7 @@
   </div>
   <p>Find me on Facebook, Linkedin, and GitHub.</p>
   <h4> Email me</h4>
-  <input type=submit value=email>
+  <a href = "mailto:shervheimb6@gmail.com"><input type=submit value=email></a>
   <h6>&copy; Copyright. All Rights Reserved.</h6>
 </body>
 
