--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 </html>
 
 <body>
-  <div class="header">
+  <header>
     <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-0/p206x206/57390087_10157180689077463_7375874485632630784_n.jpg?_nc_cat=111&_nc_oc=AQmJOpnlz0ykIpjU4x55uAAZitDcXsFLee1lGHhkzf4FCNyE2OfWroPOPX9SbC0Cdro&_nc_ht=scontent-ort2-1.xx&oh=e0f091ba8235bb523aaadc7487b3e5f7&oe=5E1AD868">
     <h1>Brent Shervheim</h1>
-    <p class="about-me">I am a full stack developer specializing in HTML,CSS, JS, PHP, Python, Ruby, Node, large databases, and full stack developement. I like to run, bike, atv, fish, snowboard, fly, and take my laptap out to the fish house and play with code. I've worked with some of the best and brightest in Silicon Valley and brainstormed with men and woman known as the best in the tech industry </p>
-  </div>
-
-  <h2>Projects</h2>
-  <p class="title">Web Development projects</p>
-  <ul>
-    <li>Code School Copy Editor</li>
-    <li>Baby Name Selector</li>
-    <li>CSS Selector Finder</li>
-    <li>HTML Formatter</li>
-    <li>Top 3 Donkey Movie List</li>
-    <li>Food Namuër</li>
-    <li>Air BnB</li>
-    <li>Craigslists Blooper Finder.com</li>
-  </ul>
+    <p class="about-me">I am a full stack developer specializing in HTML,CSS, JS, PHP, Python, Ruby, Node, large databases, and full stack developement. I like to run, bike, atv, fish, snowboard, fly, and take my laptap out to the fish house and play with code. I've worked with some of the best and brightest in Silicon Valley and brainstormed with men and woman known as the best in the tech industry. </p>
+  </header>
+   <h2>Projects</h2>
+     <p class="title">Web Development projects</p>
+      <ul>
+        <li>Code School Copy Editor</li>
+        <li>Baby Name Selector</li>
+        <li>CSS Selector Finder</li>
+        <li>HTML Formatter</li>
+        <li>Top 3 Donkey Movie List</li>
+        <li>Food Namuër</li>
+        <li>Air BnB</li>
+        <li>Craigslists Blooper Finder.com</li>
+        <li>Networking Events Live!</li>
+      </ul>
 
   <p class="title">Design projects</p>
   <ul>
@@ -46,7 +46,7 @@
   </div>
   <p>Find me on Facebook, Linkedin, and GitHub.</p>
   <h4> Email me</h4>
-  <a href = "mailto:shervheimb6@gmail.com"><input type=submit value=email></a>
+  <a href = "mailto:shervheimb6@gmail.com"><input type=submit value=Email></a>
   <h6>&copy; Copyright.  All Rights Reserved.</h6>
 </body>
 
