--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <header>
       <nav>
           <a href="C:\Projects\website1\index.html">Home</a>
-          <a href="#sponsor">Sponsor</a>
+          <a href="#email">Email</a>
           <a href="mailto:shervheimb6@gmail.com">Contact</a>
           <a href="C:\Projects\About Page\index.html">About Page</a>
-          <a href= "C:\Projects\Brentsbio\index.html">Bio</a>
+          <a href= "C:\Projects\Store Page\index.html">Sticker Store</a>
       </nav>
       
     <figure>
-      <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-0/p206x206/57390087_10157180689077463_7375874485632630784_n.jpg?_nc_cat=111&_nc_oc=AQmJOpnlz0ykIpjU4x55uAAZitDcXsFLee1lGHhkzf4FCNyE2OfWroPOPX9SbC0Cdro&_nc_ht=scontent-ort2-1.xx&oh=e0f091ba8235bb523aaadc7487b3e5f7&oe=5E1AD868">
+      <img src="https://www.facebook.com/photo.php?fbid=10157180689072463&set=pb.616552462.-2207520000..&type=3&size=2008%2C2015">
     </figure>
       <h1>Brent Shervheim</h1>
     <p class="about-me">I am a full stack developer specializing in HTML,CSS, JS, PHP, Python, Ruby, Node, large databases, and full stack developement. I like to run, bike, atv, fish, snowboard, fly, and take my laptap out to the fish house and play with code. I've worked with some of the best and brightest in Silicon Valley and brainstormed with men and woman known as the best in the tech industry. </p>
@@ -55,7 +55,8 @@
   <h2>Contact</h2>
   </div>
   <p>Find me on Facebook, Linkedin, and GitHub.</p>
-  <h4> Email me</h4>
+  <h4 id="email"> Email me:</h4>
+  <h4><a href = "mailto:shervheimb6@gmail.com">Brent Shervheim</h4></a>
   <a href = "mailto:shervheimb6@gmail.com"><input type=submit value=Email></a>
   <h6>&copy; Copyright.  All Rights Reserved.</h6>
 </body>
