--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </nav>
       
     <figure>
-      <img src="https://www.facebook.com/photo.php?fbid=10157180689072463&set=pb.616552462.-2207520000..&type=3&size=2008%2C2015">
+      <img src="C:\Projects\Brentsbio\images\brentsbioimage.jpg">
+      <!--<img src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg" alt="">-->
     </figure>
       <h1>Brent Shervheim</h1>
     <p class="about-me">I am a full stack developer specializing in HTML,CSS, JS, PHP, Python, Ruby, Node, large databases, and full stack developement. I like to run, bike, atv, fish, snowboard, fly, and take my laptap out to the fish house and play with code. I've worked with some of the best and brightest in Silicon Valley and brainstormed with men and woman known as the best in the tech industry. </p>
